# stackoverservices-lib

./: .gitignore  Dockerfile  Pipfile  README.md  pyproject.toml
src/: README.md  setup.py  test.py  teste.csv
src/stackoverservices/data/corpus/: filters.py
src/stackoverservices/data/text/: converters.py
src/stackoverservices/dataset/xml/: sos_handler.py
src/stackoverservices/models/: post_model.py
stackoverservices/: pyproject.toml
stackoverservices/tests/: test_stackoverservices.py
tests/: conftest.py  data-mock.xml  main_test.py  test_data.py  test_dataset_xml.py  test_stackoverservices.py
tests/unit/dataset/: conftest.py  test_handler.py  test_model.py
