[tool.poetry]
name = "stackoverservices"
version = "0.1.0"
description = "A library for Stack Overflow data analysis"
authors = ["Alan Bandeira <alan.p.bandeira@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19.2"
pandas = "^1.1.3"
openpyxl = "^3.0.5"
dash = "^1.16.3"
beautifulsoup4 = "^4.9.3"
dask = {extras = ["complete"], version = "^2021.4.0"}
spacy = "^3.0.6"
flake8 = "^3.9.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
autopep8 = "^1.5.7"
jupyter = "^1.0.0"
mypy = "^0.812"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
